--- a/index.html
+++ b/index.html
@@ -24,5 +24,16 @@
 	<label>Game Number: </label>
 	<span id="gameNumber"> TBD </span>
 </div>
+<div>
+<a id="obsLink" target="_blank">Auto Refreshing page</a>
+</div>
+<div>
+<span>OBS resource path: </span>
+<span id="obsPath"></span>
+</div>
+<iframe  frameborder="0" scrolling="no" width="250px" height="350px" 
+	src="https://s3.us-east-2.amazonaws.com/hiddentraitor.ravinmaddhatter.com/tbd.png"
+	id="imgbox"></iframe>
+
 <script src="hiddenTraitor.js"></script>
 </html>
